--- a/ImageRecognizationTest/ImageRecognizationTest.csproj
+++ b/ImageRecognizationTest/ImageRecognizationTest.csproj
@@ -14,26 +14,60 @@
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>bin\x64\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <OutputPath>bin\x86\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="OpenCvSharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6adad1e807fea099, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\x86\OpenCVSharp-2.4.5\OpenCvSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="OpenCvSharp.CPlusPlus, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6adad1e807fea099, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\x86\OpenCVSharp-2.4.5\OpenCvSharp.CPlusPlus.dll</HintPath>
+    </Reference>
+    <Reference Include="OpenCvSharp.Extensions, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6adad1e807fea099, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\x86\OpenCVSharp-2.4.5\OpenCvSharp.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -56,6 +90,7 @@
     <Compile Include="RecognizedImage.xaml.cs">
       <DependentUpon>RecognizedImage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WashTagRecognize.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -87,10 +122,185 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Resource Include="answer\101.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\102.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\103.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\104.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\105.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\106.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\107.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\201.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\202.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\301.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\302.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\303.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\304.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\401.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\402.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\403.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\501.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\502.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\601.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\602.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\603.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="answer\604.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_calib3d245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_calib3d245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_contrib245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_contrib245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_core245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_core245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_features2d245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_features2d245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_ffmpeg245_64.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_flann245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_flann245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_gpu245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_gpu245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_highgui245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_highgui245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_imgproc245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_imgproc245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_legacy245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_legacy245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_ml245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_ml245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_nonfree245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_nonfree245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_objdetect245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_objdetect245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_photo245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_photo245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_stitching245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_stitching245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_superres245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_superres245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_ts245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_ts245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_video245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_video245d.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_videostab245.dll" />
+    <Content Include="lib\x64\OpenCV-2.4.5\opencv_videostab245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_calib3d245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_calib3d245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_contrib245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_contrib245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_core245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_core245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_features2d245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_features2d245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_ffmpeg245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_flann245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_flann245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_gpu245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_gpu245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_highgui245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_highgui245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_imgproc245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_imgproc245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_legacy245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_legacy245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_ml245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_ml245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_nonfree245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_nonfree245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_objdetect245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_objdetect245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_photo245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_photo245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_stitching245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_stitching245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_superres245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_superres245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_ts245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_ts245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_video245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_video245d.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_videostab245.dll" />
+    <Content Include="lib\x86\OpenCV-2.4.5\opencv_videostab245d.dll" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <Resource Include="lib\x64\OpenCVSharp-2.4.5\LGPL.txt" />
+    <Content Include="lib\x64\OpenCVSharp-2.4.5\OpenCvSharp.Blob.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="lib\x64\OpenCVSharp-2.4.5\OpenCvSharp.CPlusPlus.dll" />
+    <Content Include="lib\x64\OpenCVSharp-2.4.5\OpenCvSharp.DebuggerVisualizers.dll" />
+    <Content Include="lib\x64\OpenCVSharp-2.4.5\OpenCvSharp.dll" />
+    <Content Include="lib\x64\OpenCVSharp-2.4.5\OpenCvSharp.Extensions.dll" />
+    <Content Include="lib\x64\OpenCVSharp-2.4.5\OpenCvSharp.Gpu.dll" />
+    <Content Include="lib\x64\OpenCVSharp-2.4.5\OpenCvSharp.MachineLearning.dll" />
+    <Content Include="lib\x64\OpenCVSharp-2.4.5\OpenCvSharp.UserInterface.dll" />
+    <Content Include="lib\x64\OpenCVSharp-2.4.5\OpenCvSharpExtern.dll" />
+    <Resource Include="lib\x64\OpenCVSharp-2.4.5\ReadMe.txt" />
+    <Resource Include="lib\x64\OpenCVSharp-2.4.5\XmlDoc-English\OpenCvSharp.Blob.xml" />
+    <Resource Include="lib\x64\OpenCVSharp-2.4.5\XmlDoc-English\OpenCvSharp.CPlusPlus.xml" />
+    <Resource Include="lib\x64\OpenCVSharp-2.4.5\XmlDoc-English\OpenCvSharp.Extensions.xml" />
+    <Resource Include="lib\x64\OpenCVSharp-2.4.5\XmlDoc-English\OpenCvSharp.Gpu.xml" />
+    <Resource Include="lib\x64\OpenCVSharp-2.4.5\XmlDoc-English\OpenCvSharp.MachineLearning.xml" />
+    <Resource Include="lib\x64\OpenCVSharp-2.4.5\XmlDoc-English\OpenCvSharp.UserInterface.xml" />
+    <Resource Include="lib\x64\OpenCVSharp-2.4.5\XmlDoc-English\OpenCvSharp.xml" />
+    <Resource Include="lib\x64\OpenCVSharp-2.4.5\XmlDoc-Japanese\OpenCvSharp.Blob.xml" />
+    <Resource Include="lib\x64\OpenCVSharp-2.4.5\XmlDoc-Japanese\OpenCvSharp.CPlusPlus.xml" />
+    <Resource Include="lib\x64\OpenCVSharp-2.4.5\XmlDoc-Japanese\OpenCvSharp.Extensions.xml" />
+    <Resource Include="lib\x64\OpenCVSharp-2.4.5\XmlDoc-Japanese\OpenCvSharp.Gpu.xml" />
+    <Resource Include="lib\x64\OpenCVSharp-2.4.5\XmlDoc-Japanese\OpenCvSharp.MachineLearning.xml" />
+    <Resource Include="lib\x64\OpenCVSharp-2.4.5\XmlDoc-Japanese\OpenCvSharp.UserInterface.xml" />
+    <Resource Include="lib\x64\OpenCVSharp-2.4.5\XmlDoc-Japanese\OpenCvSharp.xml" />
+    <Content Include="lib\x64\OpenCVSharp-2.4.5\OpenCvSharp.Blob.dll.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="lib\x64\OpenCVSharp-2.4.5\OpenCvSharp.dll.config" />
+    <None Include="lib\x64\OpenCVSharp-2.4.5\OpenCvSharp.MachineLearning.dll.config" />
+    <None Include="lib\x86\OpenCVSharp-2.4.5\OpenCvSharp.Blob.dll.config" />
+    <None Include="lib\x86\OpenCVSharp-2.4.5\OpenCvSharp.dll.config" />
+    <None Include="lib\x86\OpenCVSharp-2.4.5\OpenCvSharp.MachineLearning.dll.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -99,6 +309,36 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="lib\x86\OpenCVSharp-2.4.5\LGPL.txt" />
+    <Content Include="lib\x86\OpenCVSharp-2.4.5\OpenCvSharp.Blob.dll" />
+    <Content Include="lib\x86\OpenCVSharp-2.4.5\OpenCvSharp.CPlusPlus.dll" />
+    <Content Include="lib\x86\OpenCVSharp-2.4.5\OpenCvSharp.DebuggerVisualizers.dll" />
+    <Content Include="lib\x86\OpenCVSharp-2.4.5\OpenCvSharp.dll" />
+    <Content Include="lib\x86\OpenCVSharp-2.4.5\OpenCvSharp.Extensions.dll" />
+    <Content Include="lib\x86\OpenCVSharp-2.4.5\OpenCvSharp.Gpu.dll" />
+    <Content Include="lib\x86\OpenCVSharp-2.4.5\OpenCvSharp.MachineLearning.dll" />
+    <Content Include="lib\x86\OpenCVSharp-2.4.5\OpenCvSharp.UserInterface.dll" />
+    <Content Include="lib\x86\OpenCVSharp-2.4.5\OpenCvSharpExtern.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Resource Include="lib\x86\OpenCVSharp-2.4.5\ReadMe.txt" />
+    <Resource Include="lib\x86\OpenCVSharp-2.4.5\XmlDoc-English\OpenCvSharp.Blob.xml" />
+    <Resource Include="lib\x86\OpenCVSharp-2.4.5\XmlDoc-English\OpenCvSharp.CPlusPlus.xml" />
+    <Resource Include="lib\x86\OpenCVSharp-2.4.5\XmlDoc-English\OpenCvSharp.Extensions.xml" />
+    <Resource Include="lib\x86\OpenCVSharp-2.4.5\XmlDoc-English\OpenCvSharp.Gpu.xml" />
+    <Resource Include="lib\x86\OpenCVSharp-2.4.5\XmlDoc-English\OpenCvSharp.MachineLearning.xml" />
+    <Resource Include="lib\x86\OpenCVSharp-2.4.5\XmlDoc-English\OpenCvSharp.UserInterface.xml" />
+    <Resource Include="lib\x86\OpenCVSharp-2.4.5\XmlDoc-English\OpenCvSharp.xml" />
+    <Resource Include="lib\x86\OpenCVSharp-2.4.5\XmlDoc-Japanese\OpenCvSharp.Blob.xml" />
+    <Resource Include="lib\x86\OpenCVSharp-2.4.5\XmlDoc-Japanese\OpenCvSharp.CPlusPlus.xml" />
+    <Resource Include="lib\x86\OpenCVSharp-2.4.5\XmlDoc-Japanese\OpenCvSharp.Extensions.xml" />
+    <Resource Include="lib\x86\OpenCVSharp-2.4.5\XmlDoc-Japanese\OpenCvSharp.Gpu.xml" />
+    <Resource Include="lib\x86\OpenCVSharp-2.4.5\XmlDoc-Japanese\OpenCvSharp.MachineLearning.xml" />
+    <Resource Include="lib\x86\OpenCVSharp-2.4.5\XmlDoc-Japanese\OpenCvSharp.UserInterface.xml" />
+    <Resource Include="lib\x86\OpenCVSharp-2.4.5\XmlDoc-Japanese\OpenCvSharp.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
